localzones/echoserver-test/echoserver-deployment-baseline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-baseline
  namespace: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver-baseline
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-baseline
    spec:
      nodeSelector:
        test: normal
      containers:
      - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
