localzones/echoserver-test/echoserver-service-baseline.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-baseline
  namespace: echoserver
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver-baseline
