localzones/echoserver-test/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0b123456caa5be057a
    alb.ingress.kubernetes.io/subnets: subnet-0b123456caa5be057a
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
